@@ -1,6 +1,10 @@
+2007-09-18  Sébastien Sablé  <sable@users.sourceforge.net>
+
+	* Sybase.py: Corrected callproc after refactoring
+
 2007-09-14  Sébastien Sablé  <sable@users.sourceforge.net>
 
-	* Sybase.py: corrected CS_CURSOR_CLOSE acts as ct_cancel on a
+	* Sybase.py: Corrected CS_CURSOR_CLOSE acts as ct_cancel on a
 	ct_cursor
 	
 	* Sybase.py: Add type mapping as proposed in
